objects/TradeShow_Mapping_Data__c.object
<CustomObject>
    <description>Tradeshow mapping between csv and NADA Swipe object</description>
    <fields>
        <fullName>Additional_Column_Name__c</fullName>
        <inlineHelpText>For Demographics columns (name of actual type of data in the column)....for reporting</inlineHelpText>
        <label>Additional Column Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_Data_Type__c</fullName>
        <label>Column Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Column_Header_Question_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Column Header Question Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column_Number__c</fullName>
        <inlineHelpText>Number (from left on the file being loaded</inlineHelpText>
        <label>Column Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination_Column_Name__c</fullName>
        <label>Destination Column Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Show_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tradeshow Show Code</label>
        <referenceTo>Tradeshow__c</referenceTo>
        <relationshipLabel>TradeShow Mapping Data</relationshipLabel>
        <relationshipName>TradeShow_Mapping_Data</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Values_To_Ignore__c</fullName>
        <inlineHelpText>Pipe (&apos;|&apos;) delemited list of values to ignore for this field.  If single value, do not use pipe.  If multiple values only use pipe between fields.</inlineHelpText>
        <label>Values To Ignore</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>TradeShow Mapping Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Column_Data_Type__c</columns>
        <columns>Destination_Column_Name__c</columns>
        <columns>Column_Header_Question_Name__c</columns>
        <columns>Additional_Column_Name__c</columns>
        <columns>Ignore_Column__c</columns>
        <columns>Values_To_Ignore__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_ADP</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Column_Data_Type__c</columns>
        <columns>Destination_Column_Name__c</columns>
        <columns>Column_Header_Question_Name__c</columns>
        <columns>Additional_Column_Name__c</columns>
        <columns>Ignore_Column__c</columns>
        <columns>Values_To_Ignore__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>NADA ADP,NADA FY15 - Auto</value>
        </filters>
        <label>NADA Auto</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Cobalt</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Column_Data_Type__c</columns>
        <columns>Destination_Column_Name__c</columns>
        <columns>Column_Header_Question_Name__c</columns>
        <columns>Additional_Column_Name__c</columns>
        <columns>Ignore_Column__c</columns>
        <columns>Values_To_Ignore__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>cobalt,digital</value>
        </filters>
        <label>NADA Digital</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Dealix</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Column_Data_Type__c</columns>
        <columns>Destination_Column_Name__c</columns>
        <columns>Column_Header_Question_Name__c</columns>
        <columns>Additional_Column_Name__c</columns>
        <columns>Ignore_Column__c</columns>
        <columns>Values_To_Ignore__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>Dealix</value>
        </filters>
        <label>NADA Dealix (FY14)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Offsite</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Column_Data_Type__c</columns>
        <columns>Destination_Column_Name__c</columns>
        <columns>Column_Header_Question_Name__c</columns>
        <columns>Additional_Column_Name__c</columns>
        <columns>Ignore_Column__c</columns>
        <columns>Values_To_Ignore__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>offsite</value>
        </filters>
        <label>NADA Offsite</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Party</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Column_Data_Type__c</columns>
        <columns>Destination_Column_Name__c</columns>
        <columns>Column_Header_Question_Name__c</columns>
        <columns>Additional_Column_Name__c</columns>
        <columns>Ignore_Column__c</columns>
        <columns>Values_To_Ignore__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>party</value>
        </filters>
        <label>NADA Party (FY14)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NADA_Truck</fullName>
        <columns>NAME</columns>
        <columns>Tradeshow_Show_Code__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Column_Data_Type__c</columns>
        <columns>Destination_Column_Name__c</columns>
        <columns>Column_Header_Question_Name__c</columns>
        <columns>Additional_Column_Name__c</columns>
        <columns>Ignore_Column__c</columns>
        <columns>Values_To_Ignore__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tradeshow_Show_Code__c</field>
            <operation>contains</operation>
            <value>truck</value>
        </filters>
        <label>NADA Truck</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TSD-{00000}</displayFormat>
        <label>TradeShow Mapping Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TradeShow Mapping Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DS_TradeMap_Ignore_Or_Dest_Col_Name_Rqrd</fullName>
        <active>true</active>
        <description>Either Ignore Column is checked or the Destination Column name must be provided</description>
        <errorConditionFormula>Ignore_Column__c = False &amp;&amp; 
ISBLANK( Destination_Column_Name__c )</errorConditionFormula>
        <errorDisplayField>Destination_Column_Name__c</errorDisplayField>
        <errorMessage>Either &quot;Ignore Column&quot; must be checked or the &quot;Destination Column Name&quot; must be provided.</errorMessage>
    </validationRules>
</CustomObject>